@@ -1203,108 +1203,3 @@ e_poolv_destroy(EPoolv *poolv)
 #endif
 	g_free(poolv);
 }
-
-#if 0
-
-#define CHUNK_SIZE (20)
-#define CHUNK_COUNT (32)
-
-#define s(x)
-
-main()
-{
-	int i;
-	MemChunk *mc;
-	void *mem, *last;
-	GMemChunk *gmc;
-	struct _EStrv *s;
-
-	s = strv_new(8);
-	s = strv_set(s, 1, "Testing 1");
-	s = strv_set(s, 2, "Testing 2");
-	s = strv_set(s, 3, "Testing 3");
-	s = strv_set(s, 4, "Testing 4");
-	s = strv_set(s, 5, "Testing 5");
-	s = strv_set(s, 6, "Testing 7");
-
-	for (i=0;i<8;i++) {
-		printf("s[%d] = %s\n", i, strv_get(s, i));
-	}
-
-	s(sleep(5));
-
-	printf("packing ...\n");
-	s = strv_pack(s);
-
-	for (i=0;i<8;i++) {
-		printf("s[%d] = %s\n", i, strv_get(s, i));
-	}
-
-	printf("setting ...\n");
-
-	s = strv_set_ref(s, 1, "Testing 1 x");
-
-	for (i=0;i<8;i++) {
-		printf("s[%d] = %s\n", i, strv_get(s, i));
-	}
-
-	printf("packing ...\n");
-	s = strv_pack(s);
-
-	for (i=0;i<8;i++) {
-		printf("s[%d] = %s\n", i, strv_get(s, i));
-	}
-
-	strv_free(s);
-
-#if 0
-	time_start("Using memchunks");
-	mc = memchunk_new(CHUNK_COUNT, CHUNK_SIZE);
-	for (i=0;i<1000000;i++) {
-		mem = memchunk_alloc(mc);
-		if ((i & 1) == 0)
-			memchunk_free(mc, mem);
-	}
-	s(sleep(10));
-	memchunk_destroy(mc);
-	time_end("allocating 1000000 memchunks, freeing 500k");
-
-	time_start("Using gmemchunks");
-	gmc = g_mem_chunk_new("memchunk", CHUNK_SIZE, CHUNK_SIZE*CHUNK_COUNT, G_ALLOC_AND_FREE);
-	for (i=0;i<1000000;i++) {
-		mem = g_mem_chunk_alloc(gmc);
-		if ((i & 1) == 0)
-			g_mem_chunk_free(gmc, mem);
-	}
-	s(sleep(10));
-	g_mem_chunk_destroy(gmc);
-	time_end("allocating 1000000 gmemchunks, freeing 500k");
-
-	time_start("Using memchunks");
-	mc = memchunk_new(CHUNK_COUNT, CHUNK_SIZE);
-	for (i=0;i<1000000;i++) {
-		mem = memchunk_alloc(mc);
-	}
-	s(sleep(10));
-	memchunk_destroy(mc);
-	time_end("allocating 1000000 memchunks");
-
-	time_start("Using gmemchunks");
-	gmc = g_mem_chunk_new("memchunk", CHUNK_SIZE, CHUNK_COUNT*CHUNK_SIZE, G_ALLOC_ONLY);
-	for (i=0;i<1000000;i++) {
-		mem = g_mem_chunk_alloc(gmc);
-	}
-	s(sleep(10));
-	g_mem_chunk_destroy(gmc);
-	time_end("allocating 1000000 gmemchunks");
-
-	time_start("Using malloc");
-	for (i=0;i<1000000;i++) {
-		malloc(CHUNK_SIZE);
-	}
-	time_end("allocating 1000000 malloc");
-#endif
-	
-}
-
-#endif
